// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test result after refactoring update_quality failed 1`] = `
Array [
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 8,
    "sell_in": -1,
  },
  Item {
    "name": "Aged Brie",
    "quality": 20,
    "sell_in": -9,
  },
  Item {
    "name": "Elixir of the Mongoose",
    "quality": 0,
    "sell_in": -6,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sell_in": 0,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 38,
    "sell_in": 4,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sell_in": -3,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 0,
    "sell_in": -8,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 0,
    "sell_in": -5,
  },
  Item {
    "name": "New Item",
    "quality": 0,
    "sell_in": -8,
  },
]
`;

exports[`Test result after refactoring update_quality failed 2`] = `
Array [
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 6,
    "sell_in": -2,
  },
  Item {
    "name": "Aged Brie",
    "quality": 22,
    "sell_in": -10,
  },
  Item {
    "name": "Elixir of the Mongoose",
    "quality": 0,
    "sell_in": -7,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sell_in": 0,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 41,
    "sell_in": 3,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sell_in": -4,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 0,
    "sell_in": -9,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 0,
    "sell_in": -6,
  },
  Item {
    "name": "New Item",
    "quality": 0,
    "sell_in": -9,
  },
]
`;

exports[`Test result after refactoring update_quality failed 3`] = `
Array [
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 4,
    "sell_in": -3,
  },
  Item {
    "name": "Aged Brie",
    "quality": 24,
    "sell_in": -11,
  },
  Item {
    "name": "Elixir of the Mongoose",
    "quality": 0,
    "sell_in": -8,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sell_in": 0,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 44,
    "sell_in": 2,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sell_in": -5,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 0,
    "sell_in": -10,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 0,
    "sell_in": -7,
  },
  Item {
    "name": "New Item",
    "quality": 0,
    "sell_in": -10,
  },
]
`;

exports[`Test result after refactoring update_quality failed 4`] = `
Array [
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 2,
    "sell_in": -4,
  },
  Item {
    "name": "Aged Brie",
    "quality": 26,
    "sell_in": -12,
  },
  Item {
    "name": "Elixir of the Mongoose",
    "quality": 0,
    "sell_in": -9,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sell_in": 0,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 47,
    "sell_in": 1,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sell_in": -6,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 0,
    "sell_in": -11,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 0,
    "sell_in": -8,
  },
  Item {
    "name": "New Item",
    "quality": 0,
    "sell_in": -11,
  },
]
`;

exports[`Test result after refactoring update_quality failed 5`] = `
Array [
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 0,
    "sell_in": -5,
  },
  Item {
    "name": "Aged Brie",
    "quality": 28,
    "sell_in": -13,
  },
  Item {
    "name": "Elixir of the Mongoose",
    "quality": 0,
    "sell_in": -10,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sell_in": 0,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 50,
    "sell_in": 0,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sell_in": -7,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 0,
    "sell_in": -12,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 0,
    "sell_in": -9,
  },
  Item {
    "name": "New Item",
    "quality": 0,
    "sell_in": -12,
  },
]
`;

exports[`Test result after refactoring update_quality failed 6`] = `
Array [
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 0,
    "sell_in": -6,
  },
  Item {
    "name": "Aged Brie",
    "quality": 30,
    "sell_in": -14,
  },
  Item {
    "name": "Elixir of the Mongoose",
    "quality": 0,
    "sell_in": -11,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sell_in": 0,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sell_in": -1,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sell_in": -8,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 0,
    "sell_in": -13,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 0,
    "sell_in": -10,
  },
  Item {
    "name": "New Item",
    "quality": 0,
    "sell_in": -13,
  },
]
`;

exports[`Test result after refactoring update_quality failed 7`] = `
Array [
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 0,
    "sell_in": -7,
  },
  Item {
    "name": "Aged Brie",
    "quality": 32,
    "sell_in": -15,
  },
  Item {
    "name": "Elixir of the Mongoose",
    "quality": 0,
    "sell_in": -12,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sell_in": 0,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sell_in": -2,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sell_in": -9,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 0,
    "sell_in": -14,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 0,
    "sell_in": -11,
  },
  Item {
    "name": "New Item",
    "quality": 0,
    "sell_in": -14,
  },
]
`;

exports[`Test result after refactoring update_quality failed 8`] = `
Array [
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 0,
    "sell_in": -8,
  },
  Item {
    "name": "Aged Brie",
    "quality": 34,
    "sell_in": -16,
  },
  Item {
    "name": "Elixir of the Mongoose",
    "quality": 0,
    "sell_in": -13,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sell_in": 0,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sell_in": -3,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sell_in": -10,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 0,
    "sell_in": -15,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 0,
    "sell_in": -12,
  },
  Item {
    "name": "New Item",
    "quality": 0,
    "sell_in": -15,
  },
]
`;

exports[`Test result after refactoring update_quality failed 9`] = `
Array [
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 0,
    "sell_in": -9,
  },
  Item {
    "name": "Aged Brie",
    "quality": 36,
    "sell_in": -17,
  },
  Item {
    "name": "Elixir of the Mongoose",
    "quality": 0,
    "sell_in": -14,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sell_in": 0,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sell_in": -4,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sell_in": -11,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 0,
    "sell_in": -16,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 0,
    "sell_in": -13,
  },
  Item {
    "name": "New Item",
    "quality": 0,
    "sell_in": -16,
  },
]
`;

exports[`Test result after refactoring update_quality failed 10`] = `
Array [
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 0,
    "sell_in": -10,
  },
  Item {
    "name": "Aged Brie",
    "quality": 38,
    "sell_in": -18,
  },
  Item {
    "name": "Elixir of the Mongoose",
    "quality": 0,
    "sell_in": -15,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sell_in": 0,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sell_in": -5,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sell_in": -12,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 0,
    "sell_in": -17,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 0,
    "sell_in": -14,
  },
  Item {
    "name": "New Item",
    "quality": 0,
    "sell_in": -17,
  },
]
`;

exports[`Test result after updating all items Quality 1`] = `
Array [
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 19,
    "sell_in": 9,
  },
  Item {
    "name": "Aged Brie",
    "quality": 1,
    "sell_in": 1,
  },
  Item {
    "name": "Elixir of the Mongoose",
    "quality": 6,
    "sell_in": 4,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sell_in": 0,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 21,
    "sell_in": 14,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 32,
    "sell_in": 7,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 5,
    "sell_in": 2,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 8,
    "sell_in": 5,
  },
  Item {
    "name": "New Item",
    "quality": 9,
    "sell_in": 2,
  },
]
`;

exports[`Test result after updating all items Quality 2`] = `
Array [
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 18,
    "sell_in": 8,
  },
  Item {
    "name": "Aged Brie",
    "quality": 2,
    "sell_in": 0,
  },
  Item {
    "name": "Elixir of the Mongoose",
    "quality": 5,
    "sell_in": 3,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sell_in": 0,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 22,
    "sell_in": 13,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 34,
    "sell_in": 6,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 4,
    "sell_in": 1,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 7,
    "sell_in": 4,
  },
  Item {
    "name": "New Item",
    "quality": 8,
    "sell_in": 1,
  },
]
`;

exports[`Test result after updating all items Quality 3`] = `
Array [
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 17,
    "sell_in": 7,
  },
  Item {
    "name": "Aged Brie",
    "quality": 4,
    "sell_in": -1,
  },
  Item {
    "name": "Elixir of the Mongoose",
    "quality": 4,
    "sell_in": 2,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sell_in": 0,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 23,
    "sell_in": 12,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 36,
    "sell_in": 5,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 3,
    "sell_in": 0,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 6,
    "sell_in": 3,
  },
  Item {
    "name": "New Item",
    "quality": 7,
    "sell_in": 0,
  },
]
`;

exports[`Test result after updating all items Quality 4`] = `
Array [
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 16,
    "sell_in": 6,
  },
  Item {
    "name": "Aged Brie",
    "quality": 6,
    "sell_in": -2,
  },
  Item {
    "name": "Elixir of the Mongoose",
    "quality": 3,
    "sell_in": 1,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sell_in": 0,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 24,
    "sell_in": 11,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 39,
    "sell_in": 4,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 1,
    "sell_in": -1,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 5,
    "sell_in": 2,
  },
  Item {
    "name": "New Item",
    "quality": 5,
    "sell_in": -1,
  },
]
`;

exports[`Test result after updating all items Quality 5`] = `
Array [
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 15,
    "sell_in": 5,
  },
  Item {
    "name": "Aged Brie",
    "quality": 8,
    "sell_in": -3,
  },
  Item {
    "name": "Elixir of the Mongoose",
    "quality": 2,
    "sell_in": 0,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sell_in": 0,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 25,
    "sell_in": 10,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 42,
    "sell_in": 3,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 0,
    "sell_in": -2,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 4,
    "sell_in": 1,
  },
  Item {
    "name": "New Item",
    "quality": 3,
    "sell_in": -2,
  },
]
`;

exports[`Test result after updating all items Quality 6`] = `
Array [
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 14,
    "sell_in": 4,
  },
  Item {
    "name": "Aged Brie",
    "quality": 10,
    "sell_in": -4,
  },
  Item {
    "name": "Elixir of the Mongoose",
    "quality": 0,
    "sell_in": -1,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sell_in": 0,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 27,
    "sell_in": 9,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 45,
    "sell_in": 2,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 0,
    "sell_in": -3,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 3,
    "sell_in": 0,
  },
  Item {
    "name": "New Item",
    "quality": 1,
    "sell_in": -3,
  },
]
`;

exports[`Test result after updating all items Quality 7`] = `
Array [
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 13,
    "sell_in": 3,
  },
  Item {
    "name": "Aged Brie",
    "quality": 12,
    "sell_in": -5,
  },
  Item {
    "name": "Elixir of the Mongoose",
    "quality": 0,
    "sell_in": -2,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sell_in": 0,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 29,
    "sell_in": 8,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 48,
    "sell_in": 1,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 0,
    "sell_in": -4,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 1,
    "sell_in": -1,
  },
  Item {
    "name": "New Item",
    "quality": 0,
    "sell_in": -4,
  },
]
`;

exports[`Test result after updating all items Quality 8`] = `
Array [
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 12,
    "sell_in": 2,
  },
  Item {
    "name": "Aged Brie",
    "quality": 14,
    "sell_in": -6,
  },
  Item {
    "name": "Elixir of the Mongoose",
    "quality": 0,
    "sell_in": -3,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sell_in": 0,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 31,
    "sell_in": 7,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 50,
    "sell_in": 0,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 0,
    "sell_in": -5,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 0,
    "sell_in": -2,
  },
  Item {
    "name": "New Item",
    "quality": 0,
    "sell_in": -5,
  },
]
`;

exports[`Test result after updating all items Quality 9`] = `
Array [
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 11,
    "sell_in": 1,
  },
  Item {
    "name": "Aged Brie",
    "quality": 16,
    "sell_in": -7,
  },
  Item {
    "name": "Elixir of the Mongoose",
    "quality": 0,
    "sell_in": -4,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sell_in": 0,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 33,
    "sell_in": 6,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sell_in": -1,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 0,
    "sell_in": -6,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 0,
    "sell_in": -3,
  },
  Item {
    "name": "New Item",
    "quality": 0,
    "sell_in": -6,
  },
]
`;

exports[`Test result after updating all items Quality 10`] = `
Array [
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 10,
    "sell_in": 0,
  },
  Item {
    "name": "Aged Brie",
    "quality": 18,
    "sell_in": -8,
  },
  Item {
    "name": "Elixir of the Mongoose",
    "quality": 0,
    "sell_in": -5,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sell_in": 0,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 35,
    "sell_in": 5,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sell_in": -2,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 0,
    "sell_in": -7,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 0,
    "sell_in": -4,
  },
  Item {
    "name": "New Item",
    "quality": 0,
    "sell_in": -7,
  },
]
`;
